fix(sidebar): fix icon vertical align

--- a/src/app/layout/sidebar/sidebar.component.scss
+++ b/src/app/layout/sidebar/sidebar.component.scss
@@ -29,12 +29,9 @@ nav {
       }
 
       .menu-item {
-        display: flex;
-        align-items: center;
         overflow: hidden;
 
         .icon-container {
-          display: flex;
           height: 38px;
           margin-right: 10px;
 
