--- a/src/app/shared/styles/app/flex.scss
+++ b/src/app/shared/styles/app/flex.scss
@@ -1,5 +1,5 @@
 .flex {
-  display: flex;
+  display: flex !important;
   &.horizontal {
     flex-direction: row;
   }
@@ -13,6 +13,9 @@
   }
   &.justify-center {
     justify-content: center;
+  }
+  &.align-center {
+    align-items: center;
   }
   &.wrap {
     flex-wrap: wrap;
